--- a/README.textile
+++ b/README.textile
@@ -13,8 +13,10 @@ This plugin is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
 
 h2. Description
 
-The plugin adds a "Clear Cache" button to the main toolbar: when clicked it will recursively delete all files/folders inside the cache folder(s).
-The cache folder(s) are configured in the project settings.
+The plugin adds a "Clear Cache" button to the main toolbar.
+One or more cache folders are configurable in the project settings.
+When clicking the button, all files/folders inside the cache will be deleted recursively.
+
 
 
 
