--- a/README.textile
+++ b/README.textile
@@ -1,8 +1,7 @@
-h1. ClearCache Plugin
+h1. Sweep Plugin
 
-Source code of the intellij IDEA "ClearCache plugin".
+Source code of the intellij IDEA "Sweep plugin".
 This is a plugin for the various intellij IDEs, working in IDEA, PhpStorm, AppCode, etc.
-
 
 
 h2. Please note
@@ -10,17 +9,14 @@ h2. Please note
 This plugin is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 
 
-
 h2. Description
 
-The plugin adds a "Clear Cache" button to the main toolbar.
-One or more cache folders are configurable in the project settings.
-When clicking the button, all files inside the cache directories will be deleted recursively.
-The plugin settings allow to delete also cached directories and hidden files and directories.
+The plugin adds a "Sweep" button to the main toolbar.
+One or more folders of temporary files within the current project are configurable in the project settings.
+When clicking the button, all files inside selected directories will be deleted recursively.
+The plugin settings allow to delete also hidden files and directories, and to exclude some files/directories from deletion using ignore-patterns.
 
 Please note: the plugin is a tool for deleting configured directories and files, it is NOT a shortcut to remotely evoke clearing the cache of a specific browser or other application.
-
-
 
 
 h2. Credits
@@ -28,10 +24,9 @@ h2. Credits
 The icons used in this plugin are part of the "Fugue iconset by p.yusukekamiyamane":http://p.yusukekamiyamane.com/
 
 
-
 h2. License
 
-Copyright 2013 Kay Stenschke
+Copyright 2013-2017 Kay Stenschke
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
