--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,7 @@
 Sweep Plugin - Changelog
 
+* 1.1.1
+    ** Made OpenApi >= 2016.1 compatible (separated ProjectComponent and Configurable)
 * 1.1.0
     ** Made notice bubbles "Darcula" theme aware
     ** General code cleanup and updates
