stability improvements: tested and fixed edge cases bugfix: made sweeping by default non-recursive (was sweeping sub-directories by default)

--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,7 +1,7 @@
 Sweep Plugin - Changelog
 
 * 1.2.1
-    ** UI (Settings) and code cleanup
+    ** UI (Settings) and code cleanup, stability improvements: tested and fixed edge cases
     ** Bugfix: Made sweeping by default non-recursive (was sweeping sub-directories by default)
 * 1.2.0
     ** Added refresh of project tree after sweeping
