--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. Sweep Plugin
 
-Source code of the intellij IDEA "Sweep plugin".
+Source code of the intellij IDEA "Sweep plugin":https://plugins.jetbrains.com/plugin/9434-sweep.
 This is a plugin for the various Jetbrains IDEs, working in IntelliJ IDEA, PhpStorm, WebStorm, PyCharm, RubyMine, AppCode, CLion, Gogland, DataGrip, Rider and Android Studio.
 
 
