--- a/README.textile
+++ b/README.textile
@@ -26,7 +26,7 @@ This plugin is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
 
 h2. Credits
 
-The icons used in this plugin are part of the "Fugue iconset by p.yusukekamiyamane":http://p.yusukekamiyamane.com/
+Icon made by Freepik from www.flaticon.com
 
 h2. Changelog
 
